<resources>
    <string name="app_name">DraWalk</string>
    <string name="art_name_placeholder">Название</string>
    <string name="author_name_placeholder">Имя автора</string>
    <string name="art_miniature_description">Миниатюра</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_profile_settings">Настройки профиля</string>

    <string name="arts_feed">Последние арты</string>
    <string name="users_feed">Пользователи</string>
    <string name="sign_in">Вход</string>
    <string name="sign_out">Выход</string>
    <string name="my_arts">Мои арты</string>
    <string name="user_name">Имя пользователя</string>
    <string name="user_avatar_description">Аватар</string>
    <string name="user_email_placeholder">user@email.com</string>
    <string name="delete_account">Удалить профиль</string>
    <string name="submit">Подтвердить</string>
    <string name="cancel">Отменить</string>
    <string name="loading_placeholder">Загрузка, пожалуйста, подождите…</string>
    <string name="loading_updating_username">Изменяю имя пользователя…</string>
    <string name="loading_deleting_app_data">Удаляю данные пользователя из приложения…</string>
    <string name="loading_deleting_auth">Данные приложения удалены. Удаляю данные авторизации…</string>
    <string name="sing_in_error">Ошибка входа, код ошибки:</string>
    <string name="no_data_placeholder">Нет данных</string>
    <string name="no_arts_text">Пока нет ни одного арта</string>
    <string name="no_users_text">Не удалось найти ни одного пользователя</string>
    <string name="no_user_arts_text">У пользователя нет артов</string>
    <string name="no_my_arts_text">У вас пока нет артов, создайте один (кнопка с картой)!</string>
    <string name="date_time_placeholder">01.01.2020 00:00</string>
    <string name="action_rename_art">Переименовать арт</string>
    <string name="action_delete_art">Удалить арт</string>
    <string name="gps_art">GPS арт</string>
    <string name="action_about">О приложении…</string>
    <string name="rename_art_loading">Меняю название арта…</string>
    <string name="delete_art_loading">Удаляю арт…</string>
    <string name="not_sure">Нет</string>
    <string name="sure">Да</string>
    <string name="art_delete_dialog_title">Удаление арта</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="rename_art_dialog_title">Переименование арта</string>
    <string name="ok">OK</string>
    <string name="enter_new_art_name">Введите новое название арта:</string>
    <string name="new_art_name_hint">Название</string>
    <string name="delete_account_dialog_title">Удаление аккаунта</string>
    <string name="user_activity_label">Данные пользователя</string>
    <string name="my_profile_activity_label">Настройки профиля</string>

    <string name="allow">Разрешить</string>
    <string name="decline">Отклонить</string>
    <string name="explanation_dialog_title">Доступ к данным</string>
    <string name="explanation_dialog_message">Чтобы продолжить необходимо разрешение на получение информации о местоположении.
        Это разрешение требуется для того,
        чтобы рисовать маршрут на основе вашей геолокации. Разрешить доступ к данным? </string>
    <string name="really_need_explanation_dialog_message">Чтобы продолжить необходимо разрешение на получение информации о местоположении.
        Это разрешение требуется для того,
        чтобы рисовать маршрут на основе вашей геолокации. Разрешить доступ к данным? </string>
    <string name="permission_denied">Отказано в разрешении</string>
    <string name="gps_explanation_dialog_message">Для продолжения необходимо получение данных о местоположении.
    Включить GPS?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="gps_explanation_message">Для получения данных о местоположении необходимо подключение к GPS и интернету, разрешение на получение доступа к местоположению.</string>
    <string name="turn_on">ВКЛЮЧИТЬ</string>
    <string name="warning_yellow_triangle">warning_yellow_triangle</string>
    <string name="map_snapshot_view">map_snapshot_view</string>
    <string name="image_uri">URI изображения</string>
    <string name="save">Сохранить</string>
    <string name="dialog_toolbar_title">Сохранить результат</string>
    <string name="share">Поделиться</string>
    <string name="settings">Настройки</string>
    <string name="choose_line_color">Выберите цвет линии</string>
    <string name="choose_line_width">Выберите толщину линии</string>
    <string name="choose_color">Выбрать цвет</string>
    <string name="start">Старт</string>
    <string name="finish">Финиш</string>
    <string name="create_art">Создать рисунок</string>
    <string name="accept">Принять</string>
    <string name="erase_art_question">Стереть рисунок?</string>
    <string name="erase_art_description">Вы уверены, что хотите сбросить рисунок? Эта операция не может быть отменена.</string>
    <string name="enter_art_name">Введите название арта…</string>
    <string name="art_saved">GPS арт сохранен!</string>
    <string name="error">Ошибка</string>
    <string name="slogan">Draw by yourself. Literally.</string>
    <string name="authors">Авторы</string>
    <string name="ivan_molochev">Иван Молочев</string>
    <string name="anastasia_voloshina">Анастасия Волошина</string>
    <string name="cant_get_current_location">Не могу получить доступ к текущему местоположению :(</string>
    <string name="cant_get_location_without_gps">Не могу определить местоположение без подключения к GPS :(</string>
    <string name="need_to_turn_on_gps_and_location">Для визуализации маршрута необходимо включить GPS и разрешить доступ к местоположению</string>
</resources>
